--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "nuxt": "^3.12.3",
+    "pinia": "^2.1.7",
+    "sass": "^1.77.8",
+    "sass-loader": "^14.2.1",
     "vue": "latest"
   }
 }
