--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt-app",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -15,5 +15,8 @@
     "sass": "^1.77.8",
     "sass-loader": "^14.2.1",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1"
   }
 }
